--- a/thermostat.html
+++ b/thermostat.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
   <script src="src/Thermostat.js"></script>
 </head>
 
