--- a/thermostat.html
+++ b/thermostat.html
@@ -3,17 +3,28 @@
 <head>
 
   <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
+  <link rel="stylesheet" href="css/toggles.css">
+  <link rel="stylesheet" href="css/toggles-light.css">
+  <link rel="stylesheet" href="css/sliders.css">
+  <link rel="stylesheet" href="css/sliders-light.css">
   <script src="src/Thermostat.js"></script>
 </head>
 
 <body id="main-body">
   <script src="jquery.js"></script>
-  <script src="src/Interface.js"></script>
 
   <h2 id="temperature"></h2>
+  <h4>
+    Power saver mode:   <button type="button" id="power-saver" class="toggle toggle-light" style="border: none; background: none;">Power Saver</button>
+  </h4>
   <button type="button" id="up">Up</button>
   <button type="button" id="down">Down</button>
-  <button type="button" id="power-saver">Power Saver</button>
   <button type="button" id="reset">Reset</button>
+
+  <script src="src/Interface.js"></script>
+  <script src="src/toggles.js" type="text/javascript"></script>
+  <script src="src/toggles.min.js" type="text/javascript"></script>
+  <script src="src/sliders.js" type="text/javascript"></script>
+  <script src="src/sliders.min.js" type="text/javascript"></script>
 </body>
 </html>
