implement weather API

--- a/thermostat.html
+++ b/thermostat.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-
+  <meta charset="UTF-8">
   <link type="text/css" rel="stylesheet" href="css/stylesheet.css"/>
   <link rel="stylesheet" href="css/toggles.css">
   <link rel="stylesheet" href="css/toggles-light.css">
@@ -17,6 +17,8 @@
   <h4>
     Power saver mode:   <button type="button" id="power-saver" class="toggle toggle-light" style="border: none; background: none;">Power Saver</button>
   </h4>
+  <p class="result"></p>
+  <p class="temp"></p>
   <button type="button" id="up">Up</button>
   <button type="button" id="down">Down</button>
   <button type="button" id="reset">Reset</button>
