--- a/thermostat.html
+++ b/thermostat.html
@@ -17,8 +17,16 @@
   <h4>
     Power saver mode:   <button type="button" id="power-saver" class="toggle toggle-light" style="border: none; background: none;">Power Saver</button>
   </h4>
-  <p class="result"></p>
-  <p class="temp"></p>
+
+  <p>City: <span class="city"></span></p>
+  <p>Temperature: <span class=temp></span></p>
+  <p>Weather: <span class="weather-description"></span></p>
+
+  <form>
+    <input id="selectedCity" type="text" placeholder="Enter city name">
+    <input id="citySelector" type="button" value="Go">
+  </form>
+
   <button type="button" id="up">Up</button>
   <button type="button" id="down">Down</button>
   <button type="button" id="reset">Reset</button>
