--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
   <script src="lib/jasmine-2.5.2/boot.js"></script>
 
   <!-- include source files here... -->
-  <script src="src/Thermostat.js"></script>
+  <script src="public/js/Thermostat.js"></script>
 
   <!-- include spec files here... -->
   <script src="spec/ThermostatSpec.js"></script>
